[package]
name = "sourcetrail-rust-indexer"
version = "0.1.0"
edition = "2024"

[lib]
name = "sourcetrail_rust_indexer_lib"
path = "src/lib.rs"

[[bin]]
name = "sourcetrail_rust_indexer"
path = "src/main.rs"

[[bin]]
name = "index_self"
path = "src/bin/index_self.rs"

[dependencies]
libipc = { package = "thoth-ipc", path = "../../../submodules/thoth-ipc/rust/libipc" }
flatbuffers = "25.12.19"
ra_ap_syntax = "0.0.321"
ra_ap_hir = "0.0.321"
ra_ap_ide_db = "0.0.321"
ra_ap_project_model = "0.0.321"
ra_ap_load-cargo = "0.0.321"
ra_ap_vfs = "0.0.321"
tempfile = "3"
log = "0.4"
env_logger = "0.11"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
